--- a/custom_piece_dataset_making.ipynb
+++ b/custom_piece_dataset_making.ipynb
@@ -78,7 +78,7 @@
         "\n",
         "def save_yolo_labels(fen, idx, output_dir, image_size=416):\n",
         "    labels = fen_to_yolo_labels(fen.strip(), image_size)\n",
-        "    with open(os.path.join(output_dir, f\"image_{idx}.txt\"), 'w') as label_file:\n",
+        "    with open(os.path.join(output_dir, f\"board_{idx}.txt\"), 'w') as label_file:\n",
         "        label_file.write('\\n'.join(labels))"
       ],
       "metadata": {
