--- a/custom_piece_dataset_making.ipynb
+++ b/custom_piece_dataset_making.ipynb
@@ -26,7 +26,7 @@
         "id": "lsrEXYNQgol2",
         "outputId": "45605bbf-b777-4d08-bc91-ec2825bab0d3"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -84,18 +84,18 @@
       "metadata": {
         "id": "o5TlHyythQhC"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "j5QexQ6nXyPH",
-        "outputId": "4277b09a-1649-4a32-8def-8b5d4838f534"
+        "outputId": "1c05d04d-51ff-453b-9cbe-9cddfd2040fb"
       },
       "outputs": [
         {
@@ -254,7 +254,7 @@
       "metadata": {
         "id": "egv19Leqj032"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -271,7 +271,7 @@
         "id": "n7XDEHWuksAJ",
         "outputId": "55f009c0-e1e0-43f9-ca4d-431c5904de80"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -288,7 +288,89 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import os\n",
+        "import shutil\n",
+        "import random\n",
+        "\n",
+        "def get_files_in_dir(directory, extensions):\n",
+        "    \"\"\"\n",
+        "    Retrieve all files in a directory with the specified extensions.\n",
+        "    \"\"\"\n",
+        "    files = []\n",
+        "    for root, _, filenames in os.walk(directory):\n",
+        "        for filename in filenames:\n",
+        "            if filename.lower().endswith(extensions):\n",
+        "                files.append(os.path.join(root, filename))\n",
+        "    return files\n",
+        "\n",
+        "\n",
+        "def split_dataset(image_dir, label_dir, output_dir, split_ratio=0.8):\n",
+        "    \"\"\"\n",
+        "    Split the dataset into training and validation sets,\n",
+        "    copying images and labels into YOLO-compatible folder structures.\n",
+        "    \"\"\"\n",
+        "    # Retrieve images and labels\n",
+        "    image_files = sorted(get_files_in_dir(image_dir, ('.png', '.jpg', '.jpeg')))\n",
+        "    label_files = sorted(get_files_in_dir(label_dir, ('.txt',)))\n",
+        "\n",
+        "    print(f\"Number of image files: {len(image_files)}\")\n",
+        "    print(f\"Number of label files: {len(label_files)}\")\n",
+        "\n",
+        "    # Ensure images and labels match\n",
+        "    if len(image_files) != len(label_files):\n",
+        "        raise ValueError(\"Number of image files and label files do not match\")\n",
+        "\n",
+        "    # Pair images and labels by filename without extensions\n",
+        "    image_basenames = [os.path.splitext(os.path.basename(img))[0] for img in image_files]\n",
+        "    label_basenames = [os.path.splitext(os.path.basename(lbl))[0] for lbl in label_files]\n",
+        "\n",
+        "    if set(image_basenames) != set(label_basenames):\n",
+        "        raise ValueError(\"Image and label filenames do not match\")\n",
+        "\n",
+        "    # Pair and shuffle\n",
+        "    combined = list(zip(image_files, label_files))\n",
+        "    random.shuffle(combined)\n",
+        "    image_files, label_files = zip(*combined)\n",
+        "\n",
+        "    # Calculate split index\n",
+        "    split_index = int(len(image_files) * split_ratio)\n",
+        "    train_images, val_images = image_files[:split_index], image_files[split_index:]\n",
+        "    train_labels, val_labels = label_files[:split_index], label_files[split_index:]\n",
+        "\n",
+        "    # Define output directories\n",
+        "    dirs = {\n",
+        "        'train_images': os.path.join(output_dir, 'train', 'images'),\n",
+        "        'train_labels': os.path.join(output_dir, 'train', 'labels'),\n",
+        "        'val_images': os.path.join(output_dir, 'val', 'images'),\n",
+        "        'val_labels': os.path.join(output_dir, 'val', 'labels')\n",
+        "    }\n",
+        "\n",
+        "    for dir_path in dirs.values():\n",
+        "        os.makedirs(dir_path, exist_ok=True)\n",
+        "\n",
+        "    # Copy training files\n",
+        "    for img, lbl in zip(train_images, train_labels):\n",
+        "        shutil.copy(img, os.path.join(dirs['train_images'], os.path.basename(img)))\n",
+        "        shutil.copy(lbl, os.path.join(dirs['train_labels'], os.path.basename(lbl)))\n",
+        "\n",
+        "    # Copy validation files\n",
+        "    for img, lbl in zip(val_images, val_labels):\n",
+        "        shutil.copy(img, os.path.join(dirs['val_images'], os.path.basename(img)))\n",
+        "        shutil.copy(lbl, os.path.join(dirs['val_labels'], os.path.basename(lbl)))\n",
+        "\n",
+        "    print(f\"✅ Dataset split completed successfully!\")\n",
+        "    print(f\"🔹 Training set: {len(train_images)} images, {len(train_labels)} labels\")\n",
+        "    print(f\"🔹 Validation set: {len(val_images)} images, {len(val_labels)} labels\")\n",
+        "\n",
+        "\n",
+        "# Example usage\n",
+        "if __name__ == \"__main__\":\n",
+        "    image_dir = r\"/content/images\"\n",
+        "    label_dir = r\"/content/labels\"\n",
+        "    output_dir = r\"/content/dataset\"\n",
+        "    split_dataset(image_dir, label_dir, output_dir)\n"
+      ],
       "metadata": {
         "id": "ID2N42kzk4Bu"
       },
